content for the home page

--- a/index.html
+++ b/index.html
@@ -4,3 +4,24 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 ---
+
+What's this?
+-------
+This is a sort of homelab journal. How-to guides will probably be the primary content. Don't expect to find equipment reviews here--if I had that sort of budget, the lab would be far larger.
+
+Topics may include:
+- Routing & Switching
+- ESXi
+- VoIP (Asterisk 15+)
+- Systems Management
+- Fails!
+
+How long have you been doing this?
+--------
+This incarnation of the lab was plugged in for the first time on January 22nd, 2018. That's what the PDU says anyway.
+
+I've been experimenting with Linux servers since roughly 2010. The first rack server I received arrived in the spring of 2011.
+
+What got you into this?
+-----
+Probably the 1U server that showed up on my doorstep in 2011.
